--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ hs_err_pid*
 /.idea/misc.xml
 /.idea/uiDesigner.xml
 /.idea/vcs.xml
+/target/classes/META-INF/JavaEDC.kotlin_module
+/target/test-classes/META-INF/JavaEDC.kotlin_module
